# TP-atp-MIPT

task1/: run.sh
task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: CMakeLists.txt  lib.cpp
task2/C/: main.cpp  main.h  main_test.cpp  test.cpp
